2010-09-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/titlepage.ipf docs/titlepage.tex: Years updated.

2010-09-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes): Add support for log-scale
	transformation of 2D image data.

2010-09-28  Volker Dobler  <vdobler@users.sourceforge.net>

	* src/axis.c (load_one_range load_range) src/axis.h
	src/parse.c src/parse.h src/save.c src/set.c src/unset.c src/util.c
	demo/all.dem demo/autoscale.dem docs/gnuplot.doc:

	Introduce a mechanism for constraining the axis limits chosen during
	autoscaling.  For example:
	    set yrange [* : 100<*<200]
	constrains autoscaling on y such that the upper range limit must fall
	between 100 and 200.

2010-09-27  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c (f_stringcolumn): The stringcolumn function didn't 
	recognize columns 0, -1, and -2. Now it treats them the same as the
	column function does.

2010-09-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (apply_head_properties): Simplify the arrowhead code.

	* src/graph3d.c src/hidden3d.c src/util3d.c src/util3d.h: Provide a
	3D wrapper apply_3dhead_properties() that dummies up an x-axis scale so
	that the 2D routine apply_head_properties() can be shared by 3D code.
	Bug #3074212

	* src/term.c (do_arrow): To do proper foreshortening of 3D arrowheads
	would require a new approach. As an approximation, assume that any short
	arrow with a big arrowhead is the result of foreshortening.
	This affects 2D arrows also, but the visual effect is not bad.

2010-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (replotrequest):  Once we have started to replot, the
	previous data no longer exists. Therefore we must set refresh_ok = 0.

2010-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (axis_checked_extend_empty_range):  When extending from
	an empty range, don't invert the axis direction by accident.
	Bug #3074365
